[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nofear-db"
version = "0.0.1"
authors = [
  { name="Philipp Nitsche", email="philippnitsche.vfx@gmail.com" },
]
description = "A small database package for an embedded NoSQL database which can be used by multiple hosts in parallel."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]